# context-profiler

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.tape  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  format_adapter.md
.github/workflows/: ci.yml  publish.yml
.plugin/: plugin.json
docs/: roadmap.md
docs/design/: cli-harness.md
docs/superpowers/plans/: 2026-05-13-cli-harness-mvp-implementation.md
docs/superpowers/specs/: 2026-05-13-context-profiler-cli-harness-design.md
examples/: README.md  convert_toolathlon.py  snapshot.json  toolathlon_raw.json
examples/agent-trace/: sample.json
examples/lmcache/: README.md  session.jsonl
examples/openhands/: README.md  session.jsonl
examples/swe_agent/: README.md  convert.py  sample_raw.json  session.jsonl
skills/analyze-agent-context/: SKILL.md
src/context_profiler/: __init__.py  cli.py  context_diff.py  diagnostics.py  formats.py  models.py  pricing.py  profiler.py  schemas.py  session_insights.py  token_utils.py  validation.py
src/context_profiler/adapters/: agent_trace_adapter.py  anthropic_adapter.py  auto_detect.py  base.py  langfuse_adapter.py  openai_adapter.py  (+1 more)
tests/: test_budget_forecast.py  test_cost_estimation.py  test_session_insights.py  test_smoke.py  test_tool_input_result_separation.py
tests/fixtures/: artifact_churn_transcript.jsonl  claude_code_transcript.jsonl  cursor_transcript.jsonl  repeated_tool_calls.json
(+8 files in other folders)
