[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-profiler"
version = "0.1.0"
description = "Framework-agnostic profiler for LLM agent context windows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Yanpeng Wang"},
]
keywords = [
    "llm", "profiler", "token", "context-window",
    "openai", "anthropic", "langfuse", "agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tiktoken>=0.7",
    "click>=8.1",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/Turdot/context-profiler"
Repository = "https://github.com/Turdot/context-profiler"
Issues = "https://github.com/Turdot/context-profiler/issues"

[project.scripts]
context-profiler = "context_profiler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
context_profiler = ["templates/*.html"]
